# Junk_o_Matic_Transbot

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  Video Tutorial link.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
13.Code/: Code.txt
18.Instruction Manual/: Download.txt
catkin_ws/src/interfaces/: CMakeLists.txt  package.xml
catkin_ws/src/interfaces/scripts/: imu_node.py  publish_bin_id.py  publish_waste_type.py
catkin_ws/src/interfaces/src/: interfaces_node.cpp
catkin_ws/src/interfaces/test/: test_basic.py  test_basic.test
catkin_ws/src/manipulation/: CMakeLists.txt  package.xml
catkin_ws/src/manipulation/action/: PickPlace.action
catkin_ws/src/manipulation/models/: box.sdf
catkin_ws/src/manipulation/scripts/: arm_driver_node.py
catkin_ws/src/manipulation/src/: arm_interface_node.cpp  manipulation_node.cpp  pick_place_server.cpp
catkin_ws/src/manipulation/test/: pick_place.test  test_basic.py  test_basic.test  test_pick_place.py
catkin_ws/src/navigation/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  waypoints.yaml
catkin_ws/src/navigation/launch/: amcl_demo.launch  move_base.launch  waypoint_nav.launch
catkin_ws/src/navigation/maps/: mock_map.pgm  mock_map.yaml
catkin_ws/src/navigation/scripts/: waypoint_nav.py  wheel_encoder_node.py
catkin_ws/src/navigation/src/: navigation_node.cpp
catkin_ws/src/navigation/test/: test_basic.py  test_basic.test
catkin_ws/src/perception/: CMakeLists.txt  package.xml
catkin_ws/src/perception/include/perception/: classifier.h
catkin_ws/src/perception/launch/: perception_demo.launch
catkin_ws/src/perception/scripts/: dummy_classifier.py
catkin_ws/src/perception/src/: camera_driver_node.cpp  classifier_node.cpp  perception_node.cpp
catkin_ws/src/perception/test/: classifier_test.cpp  test_basic.py  test_basic.test
catkin_ws/src/teleop/: CMakeLists.txt  package.xml
catkin_ws/src/teleop/launch/: teleop.launch
catkin_ws/src/teleop/scripts/: teleop_keyboard.py
code/: Code.txt
docs/: ARCHITECTURE.md  PM1.1.md  current_priorities.md  navigation_demo.md  perception_demo.md  phase1_overview.md  phase2_enhancements.md  phase3_deployment.md  project_board.md  teleop_setup.md  video_links.md  vv_checklist.md
docs/vendor-lessons/02_assembly/: 2.Installation video.txt
docs/vendor-lessons/03_first_trial/: Download Boot file.txt
hardware_control_course/4.1About expansion board and update firmware/: mcuispConfig.ini
logs/: data_capture_template.csv
software_tools/: Download.txt
vendor_libs/: README.md
yahboom_image/: DownloadLink.txt
