<?xml version="1.0"?>
<package format="2">
  <name>interfaces</name>
  <version>0.0.0</version>
  <description>Placeholder package for interfaces.</description>
  <maintainer email="rob@yengo.com">Robert Yengo</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
