<?xml version="1.0"?>
<package format="2">
  <name>interfaces</name>
  <version>0.0.0</version>
  <description>Placeholder package for interfaces.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rostest</test_depend>
</package>
